--- a/LeaveTrackerWeb/Views/Shared/_LayoutGentelella.cshtml
+++ b/LeaveTrackerWeb/Views/Shared/_LayoutGentelella.cshtml
@@ -82,6 +82,9 @@
                                         <li>
                                             @Html.ActionLink("Leave Detail", "LeaveDetails", "Leave")
                                         </li>
+                                        <li>
+                                            @Html.ActionLink("Manage Holidays", "Holidays", "Leave")
+                                        </li>
                                     </ul>
                                 </li>                        
                           
