--- a/LeaveTrackerWeb/Views/Leave/LeaveDetails.cshtml
+++ b/LeaveTrackerWeb/Views/Leave/LeaveDetails.cshtml
@@ -1,17 +1,140 @@
-﻿
+﻿@model IEnumerable<LeaveTrackerWeb.Models.LeaveModel.LeaveMapping>
 @{
-    
+    ViewBag.Title = "Leave Details";
 }
+<link href="~/Content/BootstrapTimeline.css" rel="stylesheet" />
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#btnTakenLeaveTimeLine').click(function () {
+            $.ajax({
+                url: '@Url.Action("LeaveTimeLine", "Leave")',
+                data: { LeaveType: "TAKEN" },
+                cache: false,
+                type: "Get",
+                dataType: "html",
+                success: function (data, textStatus, XMLHttpRequest) {
+                    $('#TakenContentBody').empty();
+                    $('#TakenContentBody').html(data);
+                }
+            });
+        });
 
-<!DOCTYPE html>
+        $('#btnUxAppliedLeaveTimeLine').click(function () {
+            $.ajax({
+                url: '@Url.Action("LeaveTimeLine", "Leave")',
+                data: { LeaveType: "UX" },
+                cache: false,
+                type: "Get",
+                dataType: "html",
+                success: function (data, textStatus, XMLHttpRequest) {
+                    $('#UXContentBody').empty();
+                    $('#UXContentBody').html(data);
+                }
+            });
+        });
+    });
+</script>
+<div class="col-md-12 col-sm-12 col-xs-12">
+    <div class="x_panel">
+        <div class="x_title">
+            <h2>Leave Details</h2>
+            <ul class="nav navbar-right panel_toolbox">
+                <li>
+                    <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                </li>
+                <li>
+                    <a class="close-link"><i class="fa fa-close"></i></a>
+                </li>
+            </ul>
+            <div class="clearfix"></div>
+        </div>
+        <div class="x_content">
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="col-md-6">
+                        <button id="btnTakenLeaveTimeLine" class="btn btn-sm btn-success btn-block"  type="button" data-toggle="modal" data-target="#OpenTimelineModal"> <i class="fa fa-history" aria-hidden="true"></i> Taken Leave TimeLine</button>
+                    </div>
+                    <div class="col-md-6">
+                        <button id="btnUxAppliedLeaveTimeLine" class="btn btn-sm btn-success btn-block" type="button" data-toggle="modal" data-target="#OpenUxTimelineModal"> <i class="fa fa-history" aria-hidden="true"></i> UX Applied Leave TimeLine</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <table id="datatable" class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th width="20%">Leave</th>
+                                <th width="20%">Leave Type</th>
+                                <th width="10%">Start Date</th>
+                                <th width="10%">End Date</th>
+                                <th width="10%">Total Leave Count</th>
+                                <th width="30%">Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var Leave in Model)
+                            {
+                                <tr>
+                                    <td width="20%">
+                                        @Html.Label(Leave.MyLeaveType.LeaveTypeName)
+                                        @Html.Hidden("Leave_" + Leave.LeaveMappingId, Leave.LeaveMappingId, new { @id = "hdf_" + Leave.LeaveMappingId })
+                                    </td>
+                                    <td width="10%">
+                                        @Html.Label(Leave.MyUxLeaveType.UxLeaveTypeName)
+                                    </td>
+                                    <td width="10%">
+                                        @Html.Label(Leave.StartDate.ToShortDateString())
+                                    </td>
+                                    <td width="10%">
+                                        @Html.Label(Leave.EndDate.ToShortDateString())
+                                    </td>
+                                    <td width="10%">
+                                        @Html.Label(Leave.LeaveCount.ToString())
+                                    </td>
+                                    <td width="10%">
+                                        @Html.Label(Leave.LeaveDescription)
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>LeaveDetails</title>
-</head>
-<body>
-    <div> 
+
+        </div>
     </div>
-</body>
-</html>
+</div>
+
+<div class="modal fade docs-cropped" id="OpenTimelineModal" aria-hidden="true" role="dialog" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="getCroppedCanvasTitle">Taken Leave TimeLine</h4>
+            </div>
+            <div class="modal-body" id="TakenContentBody">
+                @{
+                    Html.RenderAction("LeaveTimeLine", "Leave");
+                }
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade docs-cropped" id="OpenUxTimelineModal" aria-hidden="true" role="dialog" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="getCroppedCanvasTitle">Ux Leave TimeLine</h4>
+            </div>
+            <div class="modal-body" id="UXContentBody">
+                @{
+                    Html.RenderAction("LeaveTimeLine", "Leave");
+                }
+            </div>
+        </div>
+    </div>
+</div>
+
+
